--- a/public/change-password.html
+++ b/public/change-password.html
@@ -1,48 +1,93 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <title>Change Password</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <script src="https://cdn.tailwindcss.com"></script>
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
-  <script type="module" src="./js/change-password.js" defer></script>
-</head>
-<body class="bg-gray-100 flex items-center justify-center min-h-screen p-4">
-
-  <div class="bg-white shadow-lg rounded-2xl w-full max-w-md p-8 space-y-6 border border-gray-200">
-    <div class="text-center">
-      <h1 class="text-3xl font-semibold text-gray-900 mb-1 tracking-wide">HR System</h1>
-      <p class="text-gray-600">Securely update your account password</p>
-    </div>
-
-    <form id="change-password-form" class="space-y-5">
-      <div>
-        <label for="current-password" class="block text-gray-700 font-medium mb-1">Current Password</label>
-        <input type="password" id="current-password" placeholder="Enter your current password" class="w-full p-3 border border-gray-300 rounded-xl bg-gray-50 text-gray-900 placeholder-gray-400 focus:outline-none focus:ring-2 focus:ring-blue-600 transition" required>
-      </div>
-
-      <div>
-        <label for="new-password" class="block text-gray-700 font-medium mb-1">New Password</label>
-        <input type="password" id="new-password" placeholder="Enter new password" class="w-full p-3 border border-gray-300 rounded-xl bg-gray-50 text-gray-900 placeholder-gray-400 focus:outline-none focus:ring-2 focus:ring-blue-600 transition" required>
-      </div>
-
-      <div>
-        <label for="confirm-password" class="block text-gray-700 font-medium mb-1">Confirm New Password</label>
-        <input type="password" id="confirm-password" placeholder="Confirm new password" class="w-full p-3 border border-gray-300 rounded-xl bg-gray-50 text-gray-900 placeholder-gray-400 focus:outline-none focus:ring-2 focus:ring-blue-600 transition" required>
-      </div>
-
-      <p id="message" class="text-center text-sm text-blue-600 font-medium"></p>
-
-      <button type="submit" class="w-full bg-blue-600 text-white p-3 rounded-xl font-semibold hover:bg-blue-500 transition">
-        Change Password
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Change Password</title>
+    <script src="https://cdn.tailwindcss.com"></script>
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
+    <link rel="stylesheet" href="css/custom.css" />
+    <script type="module" src="js/change-password.js" defer></script>
+  </head>
+  <body
+    class="bg-gradient-to-br from-blue-50 via-white to-gray-50 flex items-center justify-center min-h-screen font-inter px-4"
+  >
+    <div
+      class="relative w-full max-w-md bg-white/90 backdrop-blur-sm border border-gray-200 rounded-2xl shadow-lg hover:shadow-xl transition-all duration-300 p-8 space-y-8"
+    >
+      <button
+        id="back-btn"
+        class="absolute top-5 left-5 text-gray-600 hover:text-blue-700 transition-all duration-200"
+      >
+        <i class="fa-solid fa-chevron-left text-lg"></i>
       </button>
-    </form>
-
-    <button id="back-btn" class="w-full mt-4 bg-gray-100 p-3 rounded-xl hover:bg-gray-200 transition flex items-center justify-center text-gray-800 font-medium border border-gray-300">
-      <i class="fa-solid fa-arrow-left mr-2"></i> Back to Home
-    </button>
-  </div>
-
-</body>
+      <div class="text-center space-y-2">
+        <h1 class="text-3xl font-semibold text-blue-900 tracking-wide">
+          HR System
+        </h1>
+        <p class="text-gray-600 text-sm">
+          Securely update your account password
+        </p>
+      </div>
+      <form id="change-password-form" class="space-y-5">
+        <div>
+          <label
+            for="current-password"
+            class="block text-sm font-medium text-gray-700 mb-1"
+            >Current Password</label
+          >
+          <input
+            type="password"
+            id="current-password"
+            placeholder="Enter your current password"
+            class="w-full rounded-xl border border-gray-300 bg-gray-50 px-4 py-3 text-gray-900 placeholder-gray-400 focus:outline-none focus:ring-2 focus:ring-blue-700 focus:border-transparent transition"
+            required
+          />
+        </div>
+        <div>
+          <label
+            for="new-password"
+            class="block text-sm font-medium text-gray-700 mb-1"
+            >New Password</label
+          >
+          <input
+            type="password"
+            id="new-password"
+            placeholder="Enter new password"
+            class="w-full rounded-xl border border-gray-300 bg-gray-50 px-4 py-3 text-gray-900 placeholder-gray-400 focus:outline-none focus:ring-2 focus:ring-blue-700 focus:border-transparent transition"
+            required
+          />
+        </div>
+        <div>
+          <label
+            for="confirm-password"
+            class="block text-sm font-medium text-gray-700 mb-1"
+            >Confirm New Password</label
+          >
+          <input
+            type="password"
+            id="confirm-password"
+            placeholder="Confirm new password"
+            class="w-full rounded-xl border border-gray-300 bg-gray-50 px-4 py-3 text-gray-900 placeholder-gray-400 focus:outline-none focus:ring-2 focus:ring-blue-700 focus:border-transparent transition"
+            required
+          />
+        </div>
+        <p
+          id="message"
+          class="text-center text-sm font-medium text-blue-700"
+        ></p>
+        <button
+          type="submit"
+          class="w-full bg-blue-700 text-white py-3 rounded-xl font-semibold shadow-sm hover:bg-blue-600 hover:shadow-md transition-all duration-200"
+        >
+          Change Password
+        </button>
+      </form>
+    </div>
+  </body>
 </html>
