--- a/public/auth.html
+++ b/public/auth.html
@@ -1,83 +1,156 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>HR - Auth</title>
-  <script src="https://cdn.tailwindcss.com"></script>
-  <link rel="stylesheet" href="css/custom.css">
-  <script type="module" src="./js/auth.js" defer></script>
-</head>
-<body class="min-h-screen flex items-center justify-center bg-gray-100 text-gray-900 font-serif">
-
-  <div class="relative w-96 p-8 bg-white border border-gray-300 shadow-2xl rounded-md overflow-hidden">
-
-    <h1 class="text-3xl font-extrabold mb-8 text-center tracking-widest text-gray-800">
-      HR SYSTEM
-    </h1>
-
-    <p id="message" class="text-red-600 mb-4 text-center hidden"></p>
-
-    <form id="login-form" class="space-y-5">
-      <input type="hidden" name="action" value="login">
-      <div class="flex flex-col">
-        <label class="text-gray-700 mb-1 uppercase text-xs tracking-wider">Email</label>
-        <input type="email" name="email" class="bg-gray-50 border border-gray-300 text-gray-900 rounded px-3 py-2 focus:outline-none focus:ring-2 focus:ring-blue-700" required>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>HR - Auth</title>
+    <script src="https://cdn.tailwindcss.com"></script>
+    <link rel="stylesheet" href="css/custom.css" />
+    <script type="module" src="./js/auth.js" defer></script>
+  </head>
+  <body
+    class="bg-gradient-to-br from-blue-50 via-white to-gray-50 flex items-center justify-center min-h-screen font-inter px-4 text-gray-900"
+  >
+    <div
+      class="relative w-full max-w-md bg-white/90 backdrop-blur-sm border border-gray-200 rounded-2xl shadow-lg hover:shadow-xl transition-all duration-300 p-8 space-y-6"
+    >
+      <div class="text-center space-y-2">
+        <h1 class="text-3xl font-semibold text-blue-900 tracking-wide">
+          HR System
+        </h1>
+        <p class="text-gray-600 text-sm">Access your account securely</p>
       </div>
-      <div class="flex flex-col">
-        <label class="text-gray-700 mb-1 uppercase text-xs tracking-wider">Password</label>
-        <input type="password" name="password" class="bg-gray-50 border border-gray-300 text-gray-900 rounded px-3 py-2 focus:outline-none focus:ring-2 focus:ring-blue-700" required>
-      </div>
-      <button type="submit" class="w-full bg-blue-800 hover:bg-blue-900 text-white py-2 rounded font-bold tracking-wide shadow transition-all">
-        Login
-      </button>
-      <p class="text-sm text-center text-gray-500">
-        <a href="#" id="show-signup" class="hover:text-blue-800 transition">Sign Up</a> |
-        <a href="#" id="show-forgot" class="hover:text-blue-800 transition">Forgot Password?</a>
-      </p>
-    </form>
 
-    <form id="signup-form" class="hidden space-y-5">
-      <input type="hidden" name="action" value="signup">
-      <div class="flex flex-col">
-        <label class="text-gray-700 mb-1 uppercase text-xs tracking-wider">Name</label>
-        <input type="text" name="name" class="bg-gray-50 border border-gray-300 text-gray-900 rounded px-3 py-2 focus:outline-none focus:ring-2 focus:ring-blue-700" required>
-      </div>
-      <div class="flex flex-col">
-        <label class="text-gray-700 mb-1 uppercase text-xs tracking-wider">Email</label>
-        <input type="email" name="email" class="bg-gray-50 border border-gray-300 text-gray-900 rounded px-3 py-2 focus:outline-none focus:ring-2 focus:ring-blue-700" required>
-      </div>
-      <div class="flex flex-col">
-        <label class="text-gray-700 mb-1 uppercase text-xs tracking-wider">Password</label>
-        <input type="password" name="password" class="bg-gray-50 border border-gray-300 text-gray-900 rounded px-3 py-2 focus:outline-none focus:ring-2 focus:ring-blue-700" required>
-      </div>
-      <div class="flex flex-col">
-        <label class="text-gray-700 mb-1 uppercase text-xs tracking-wider">Confirm Password</label>
-        <input type="password" name="confirm_password" class="bg-gray-50 border border-gray-300 text-gray-900 rounded px-3 py-2 focus:outline-none focus:ring-2 focus:ring-blue-700" required>
-      </div>
-      <button type="submit" class="w-full bg-blue-800 hover:bg-blue-900 text-white py-2 rounded font-bold tracking-wide shadow transition-all">
-        Sign Up
-      </button>
-      <p class="text-sm text-center text-gray-500">
-        <a href="#" id="back-to-login1" class="hover:text-blue-800 transition">Back to Login</a>
-      </p>
-    </form>
+      <p
+        id="message"
+        class="text-center text-sm font-medium text-red-600 hidden"
+      ></p>
 
-    <form id="forgot-form" class="hidden space-y-5">
-      <input type="hidden" name="action" value="forgot">
-      <div class="flex flex-col">
-        <label class="text-gray-700 mb-1 uppercase text-xs tracking-wider">Enter your email</label>
-        <input type="email" name="email" class="bg-gray-50 border border-gray-300 text-gray-900 rounded px-3 py-2 focus:outline-none focus:ring-2 focus:ring-blue-700" required>
-      </div>
-      <button type="submit" class="w-full bg-blue-800 hover:bg-blue-900 text-white py-2 rounded font-bold tracking-wide shadow transition-all">
-        Reset Password
-      </button>
-      <p class="text-sm text-center text-gray-500">
-        <a href="#" id="back-to-login2" class="hover:text-blue-800 transition">Back to Login</a>
-      </p>
-    </form>
+      <form id="login-form" class="space-y-5">
+        <input type="hidden" name="action" value="login" />
+        <div>
+          <label class="block text-sm font-medium text-gray-700 mb-1"
+            >Email</label
+          >
+          <input
+            type="email"
+            name="email"
+            class="w-full rounded-xl border border-gray-300 bg-gray-50 px-4 py-3 text-gray-900 placeholder-gray-400 focus:outline-none focus:ring-2 focus:ring-blue-700 transition"
+            required
+          />
+        </div>
+        <div>
+          <label class="block text-sm font-medium text-gray-700 mb-1"
+            >Password</label
+          >
+          <input
+            type="password"
+            name="password"
+            class="w-full rounded-xl border border-gray-300 bg-gray-50 px-4 py-3 text-gray-900 placeholder-gray-400 focus:outline-none focus:ring-2 focus:ring-blue-700 transition"
+            required
+          />
+        </div>
+        <button
+          type="submit"
+          class="w-full bg-blue-700 text-white py-3 rounded-xl font-semibold shadow-sm hover:bg-blue-600 hover:shadow-md transition-all duration-200"
+        >
+          Login
+        </button>
+        <p class="text-sm text-center text-gray-500">
+          <a href="#" id="show-signup" class="hover:text-blue-700 transition"
+            >Sign Up</a
+          >
+          |
+          <a href="#" id="show-forgot" class="hover:text-blue-700 transition"
+            >Forgot Password?</a
+          >
+        </p>
+      </form>
 
-  </div>
+      <form id="signup-form" class="hidden space-y-5">
+        <input type="hidden" name="action" value="signup" />
+        <div>
+          <label class="block text-sm font-medium text-gray-700 mb-1"
+            >Name</label
+          >
+          <input
+            type="text"
+            name="name"
+            class="w-full rounded-xl border border-gray-300 bg-gray-50 px-4 py-3 text-gray-900 placeholder-gray-400 focus:outline-none focus:ring-2 focus:ring-blue-700 transition"
+            required
+          />
+        </div>
+        <div>
+          <label class="block text-sm font-medium text-gray-700 mb-1"
+            >Email</label
+          >
+          <input
+            type="email"
+            name="email"
+            class="w-full rounded-xl border border-gray-300 bg-gray-50 px-4 py-3 text-gray-900 placeholder-gray-400 focus:outline-none focus:ring-2 focus:ring-blue-700 transition"
+            required
+          />
+        </div>
+        <div>
+          <label class="block text-sm font-medium text-gray-700 mb-1"
+            >Password</label
+          >
+          <input
+            type="password"
+            name="password"
+            class="w-full rounded-xl border border-gray-300 bg-gray-50 px-4 py-3 text-gray-900 placeholder-gray-400 focus:outline-none focus:ring-2 focus:ring-blue-700 transition"
+            required
+          />
+        </div>
+        <div>
+          <label class="block text-sm font-medium text-gray-700 mb-1"
+            >Confirm Password</label
+          >
+          <input
+            type="password"
+            name="confirm_password"
+            class="w-full rounded-xl border border-gray-300 bg-gray-50 px-4 py-3 text-gray-900 placeholder-gray-400 focus:outline-none focus:ring-2 focus:ring-blue-700 transition"
+            required
+          />
+        </div>
+        <button
+          type="submit"
+          class="w-full bg-blue-700 text-white py-3 rounded-xl font-semibold shadow-sm hover:bg-blue-600 hover:shadow-md transition-all duration-200"
+        >
+          Sign Up
+        </button>
+        <p class="text-sm text-center text-gray-500">
+          <a href="#" id="back-to-login1" class="hover:text-blue-700 transition"
+            >Back to Login</a
+          >
+        </p>
+      </form>
 
-</body>
+      <form id="forgot-form" class="hidden space-y-5">
+        <input type="hidden" name="action" value="forgot" />
+        <div>
+          <label class="block text-sm font-medium text-gray-700 mb-1"
+            >Enter your email</label
+          >
+          <input
+            type="email"
+            name="email"
+            class="w-full rounded-xl border border-gray-300 bg-gray-50 px-4 py-3 text-gray-900 placeholder-gray-400 focus:outline-none focus:ring-2 focus:ring-blue-700 transition"
+            required
+          />
+        </div>
+        <button
+          type="submit"
+          class="w-full bg-blue-700 text-white py-3 rounded-xl font-semibold shadow-sm hover:bg-blue-600 hover:shadow-md transition-all duration-200"
+        >
+          Reset Password
+        </button>
+        <p class="text-sm text-center text-gray-500">
+          <a href="#" id="back-to-login2" class="hover:text-blue-700 transition"
+            >Back to Login</a
+          >
+        </p>
+      </form>
+    </div>
+  </body>
 </html>
