--- a/public/department.html
+++ b/public/department.html
@@ -11,21 +11,33 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
+    <link rel="stylesheet" href="css/custom.css" />
     <script type="module" src="js/navigation.js" defer></script>
     <script type="module" src="js/department.js" defer></script>
   </head>
-  <body class="bg-gray-100 text-gray-900 min-h-screen flex flex-col">
-    <header class="bg-blue-900 text-white py-4 shadow-md">
-      <h1 class="text-2xl font-bold text-center">Department</h1>
+
+  <body class="bg-gray-50 text-gray-900 min-h-screen flex flex-col font-inter">
+    <header
+      class="relative w-full z-40 mt-16 bg-white/90 backdrop-blur-md border-b border-gray-200 shadow-sm transition-all duration-300"
+    >
+      <div
+        class="max-w-6xl mx-auto flex items-center justify-center px-6 py-5 text-center"
+      >
+        <h1 class="text-2xl font-semibold text-blue-900 tracking-wide">
+          Department
+        </h1>
+      </div>
     </header>
 
-    <main class="flex-1 container mx-auto p-6">
-      <section class="mb-6">
-        <h2 class="text-xl font-semibold text-gray-800 flex items-center gap-2">
-          <i class="fa-solid fa-users text-blue-700"></i>
+    <main class="flex-1 container mx-auto px-4 sm:px-6 lg:px-8 pt-10 pb-16">
+      <section class="mb-8 text-center">
+        <h2
+          class="text-2xl font-semibold text-blue-900 flex items-center justify-center gap-3"
+        >
+          <i class="fa-solid fa-users text-blue-800"></i>
           <span>Your Department</span>
         </h2>
-        <p class="text-gray-600 mt-2">
+        <p class="text-gray-600 mt-2 max-w-2xl mx-auto">
           See your colleagues, their roles, and who’s available today.
         </p>
       </section>
