--- a/public/events.html
+++ b/public/events.html
@@ -3,124 +3,188 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Events</title>
+    <title>Company Events</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link
       rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
       crossorigin="anonymous"
-      referrerpolicy="no-referrer"
     />
     <link rel="stylesheet" href="css/custom.css" />
   </head>
-  <body class="bg-gray-100 min-h-screen flex flex-col">
+
+  <body
+    class="bg-[var(--onyx-bg-base)] text-[var(--onyx-text-primary)] min-h-screen font-inter flex flex-col"
+  >
     <header
-      class="bg-blue-900 text-white py-4 shadow-md flex align-center px-10 justify-between"
+      class="nav-onyx sticky top-0 z-50 flex items-center justify-between px-4 sm:px-6 lg:px-8 py-4 backdrop-blur-xl border-b border-[var(--onyx-border)] shadow-[0_4px_20px_rgba(0,0,0,0.1)]"
     >
       <button
-        onclick="window.history.back()"
-        class="text-white hover:text-gray-300 transition"
+        onclick="history.back()"
+        class="text-[var(--onyx-text-secondary)] hover:text-[var(--onyx-accent-1)] flex items-center gap-2 transition"
       >
-        <i class="fa-solid fa-chevron-left text-lg"></i>
+        <i class="fa-solid fa-chevron-left"></i>
       </button>
-      <h1 class="text-2xl font-bold text-center">Company Events</h1>
+      <h1
+        class="text-lg sm:text-xl md:text-2xl font-semibold tracking-tight text-center flex-1 uppercase"
+      >
+        Company Events
+      </h1>
+      <div class="w-10"></div>
     </header>
 
-    <main class="flex-1 container mx-auto p-6 space-y-8">
-      <section class="bg-white rounded-lg shadow p-6">
-        <h2 class="text-xl font-semibold text-gray-800 mb-4">
-          Upcoming Events
-        </h2>
-        <p class="text-gray-600 mb-4">
-          Stay updated with the latest company events, meetings, and workshops.
-          Below are the upcoming scheduled events:
-        </p>
-        <ul class="space-y-4">
-          <li class="border-l-4 border-blue-600 bg-blue-50 rounded p-4">
-            <h3 class="font-bold text-gray-800">Team Building Workshop</h3>
-            <p class="text-gray-600">Date: October 15, 2025</p>
-            <p class="text-gray-600">Location: Main Conference Room</p>
-            <p class="text-gray-600">
-              Details: An interactive workshop to improve collaboration and
-              communication among team members.
-            </p>
-          </li>
-          <li class="border-l-4 border-green-600 bg-green-50 rounded p-4">
-            <h3 class="font-bold text-gray-800">Quarterly Town Hall</h3>
-            <p class="text-gray-600">Date: November 1, 2025</p>
-            <p class="text-gray-600">Location: Auditorium</p>
-            <p class="text-gray-600">
-              Details: Company-wide meeting to review quarterly performance and
-              announce upcoming initiatives.
-            </p>
-          </li>
-          <li class="border-l-4 border-purple-600 bg-purple-50 rounded p-4">
-            <h3 class="font-bold text-gray-800">Annual Holiday Party</h3>
-            <p class="text-gray-600">Date: December 20, 2025</p>
-            <p class="text-gray-600">Location: Rooftop Garden</p>
-            <p class="text-gray-600">
-              Details: Celebrate the year’s achievements with food, drinks, and
-              fun activities. All employees invited.
-            </p>
-          </li>
-        </ul>
-      </section>
+    <main
+      class="flex-1 container-onyx py-8 sm:py-10 px-4 sm:px-6 lg:px-10 space-y-8 fade-in"
+    >
+      <section class="space-y-6 max-w-3xl mx-auto">
+        <div class="card-onyx p-6 sm:p-8">
+          <h2
+            class="text-xl font-semibold text-[var(--onyx-accent-1)] flex items-center gap-2"
+          >
+            <i class="fa-solid fa-calendar-days"></i> Upcoming Events
+          </h2>
+          <p
+            class="text-[var(--onyx-text-secondary)] mt-2 text-sm sm:text-base leading-relaxed"
+          >
+            Stay updated with the latest company events, meetings, and
+            workshops. Below are the upcoming scheduled events:
+          </p>
 
-      <section class="bg-white rounded-lg shadow p-6">
-        <h2 class="text-xl font-semibold text-gray-800 mb-4">Past Events</h2>
-        <p class="text-gray-600 mb-4">
-          A look back at some of our memorable past events and activities.
-        </p>
-        <ul class="space-y-4">
-          <li class="border-l-4 border-red-600 bg-red-50 rounded p-4">
-            <h3 class="font-bold text-gray-800">Spring Hackathon</h3>
-            <p class="text-gray-600">Date: March 10, 2025</p>
-            <p class="text-gray-600">
-              Details: Teams competed to develop innovative solutions. Winners
-              received prizes and recognition.
-            </p>
-          </li>
-          <li class="border-l-4 border-yellow-600 bg-yellow-50 rounded p-4">
-            <h3 class="font-bold text-gray-800">Health & Wellness Day</h3>
-            <p class="text-gray-600">Date: May 22, 2025</p>
-            <p class="text-gray-600">
-              Details: Activities included yoga sessions, healthy snacks, and
-              workshops on maintaining work-life balance.
-            </p>
-          </li>
-          <li class="border-l-4 border-indigo-600 bg-indigo-50 rounded p-4">
-            <h3 class="font-bold text-gray-800">Summer BBQ Picnic</h3>
-            <p class="text-gray-600">Date: July 18, 2025</p>
-            <p class="text-gray-600">
-              Details: A fun outdoor event with games, food, and team bonding
-              activities for all employees and families.
-            </p>
-          </li>
-        </ul>
-      </section>
+          <ul class="mt-5 space-y-4">
+            <li
+              class="border-l-4 border-[var(--onyx-accent-1)] bg-[var(--onyx-bg-card)] rounded-lg p-4"
+            >
+              <h3 class="font-semibold text-[var(--onyx-text-primary)]">
+                Team Building Workshop
+              </h3>
+              <p class="text-[var(--onyx-text-secondary)] text-sm mt-1">
+                <i class="fa-regular fa-calendar mr-1"></i> October 15, 2025
+              </p>
+              <p class="text-[var(--onyx-text-secondary)] text-sm">
+                <i class="fa-solid fa-location-dot mr-1"></i> Main Conference
+                Room
+              </p>
+              <p class="text-[var(--onyx-text-secondary)] text-sm mt-1">
+                An interactive workshop to improve collaboration and
+                communication among team members.
+              </p>
+            </li>
 
-      <section class="bg-white rounded-lg shadow p-6">
-        <h2 class="text-xl font-semibold text-gray-800 mb-4">
-          Event Guidelines
-        </h2>
-        <p class="text-gray-600 mb-2">
-          - All employees are encouraged to attend company events unless
-          otherwise specified.
-        </p>
-        <p class="text-gray-600 mb-2">
-          - RSVP is required for workshops and parties to ensure proper
-          arrangements.
-        </p>
-        <p class="text-gray-600 mb-2">
-          - Follow the company’s code of conduct during events.
-        </p>
-        <p class="text-gray-600 mb-2">
-          - For outdoor events, dress appropriately and check weather updates.
-        </p>
-        <p class="text-gray-600 mb-2">
-          - Contact the HR department for any special accommodations or
-          inquiries.
-        </p>
+            <li
+              class="border-l-4 border-green-500 bg-[var(--onyx-bg-card)] rounded-lg p-4"
+            >
+              <h3 class="font-semibold text-[var(--onyx-text-primary)]">
+                Quarterly Town Hall
+              </h3>
+              <p class="text-[var(--onyx-text-secondary)] text-sm mt-1">
+                <i class="fa-regular fa-calendar mr-1"></i> November 1, 2025
+              </p>
+              <p class="text-[var(--onyx-text-secondary)] text-sm">
+                <i class="fa-solid fa-location-dot mr-1"></i> Auditorium
+              </p>
+              <p class="text-[var(--onyx-text-secondary)] text-sm mt-1">
+                Company-wide meeting to review performance and discuss future
+                initiatives.
+              </p>
+            </li>
+
+            <li
+              class="border-l-4 border-purple-500 bg-[var(--onyx-bg-card)] rounded-lg p-4"
+            >
+              <h3 class="font-semibold text-[var(--onyx-text-primary)]">
+                Annual Holiday Party
+              </h3>
+              <p class="text-[var(--onyx-text-secondary)] text-sm mt-1">
+                <i class="fa-regular fa-calendar mr-1"></i> December 20, 2025
+              </p>
+              <p class="text-[var(--onyx-text-secondary)] text-sm">
+                <i class="fa-solid fa-location-dot mr-1"></i> Rooftop Garden
+              </p>
+              <p class="text-[var(--onyx-text-secondary)] text-sm mt-1">
+                Celebrate the year’s achievements with food, drinks, and fun
+                activities. All employees invited.
+              </p>
+            </li>
+          </ul>
+        </div>
+
+        <div class="card-onyx p-6 sm:p-8">
+          <h2
+            class="text-xl font-semibold text-[var(--onyx-accent-1)] flex items-center gap-2"
+          >
+            <i class="fa-solid fa-clock-rotate-left"></i> Past Events
+          </h2>
+          <p
+            class="text-[var(--onyx-text-secondary)] mt-2 text-sm sm:text-base leading-relaxed"
+          >
+            A look back at some of our memorable past events and activities.
+          </p>
+
+          <ul class="mt-5 space-y-4">
+            <li
+              class="border-l-4 border-red-500 bg-[var(--onyx-bg-card)] rounded-lg p-4"
+            >
+              <h3 class="font-semibold text-[var(--onyx-text-primary)]">
+                Spring Hackathon
+              </h3>
+              <p class="text-[var(--onyx-text-secondary)] text-sm mt-1">
+                March 10, 2025 — Teams competed to develop innovative solutions.
+                Winners received prizes and recognition.
+              </p>
+            </li>
+
+            <li
+              class="border-l-4 border-yellow-500 bg-[var(--onyx-bg-card)] rounded-lg p-4"
+            >
+              <h3 class="font-semibold text-[var(--onyx-text-primary)]">
+                Health & Wellness Day
+              </h3>
+              <p class="text-[var(--onyx-text-secondary)] text-sm mt-1">
+                May 22, 2025 — Yoga sessions, healthy snacks, and balance
+                workshops for all employees.
+              </p>
+            </li>
+
+            <li
+              class="border-l-4 border-indigo-500 bg-[var(--onyx-bg-card)] rounded-lg p-4"
+            >
+              <h3 class="font-semibold text-[var(--onyx-text-primary)]">
+                Summer BBQ Picnic
+              </h3>
+              <p class="text-[var(--onyx-text-secondary)] text-sm mt-1">
+                July 18, 2025 — Outdoor event with food, games, and family
+                activities.
+              </p>
+            </li>
+          </ul>
+        </div>
+
+        <div class="card-onyx p-6 sm:p-8">
+          <h2
+            class="text-xl font-semibold text-[var(--onyx-accent-1)] flex items-center gap-2"
+          >
+            <i class="fa-solid fa-book"></i> Event Guidelines
+          </h2>
+          <ul
+            class="mt-3 text-[var(--onyx-text-secondary)] text-sm sm:text-base space-y-2 list-disc list-inside"
+          >
+            <li>All employees are encouraged to attend company events.</li>
+            <li>
+              RSVP is required for workshops and parties to ensure proper
+              arrangements.
+            </li>
+            <li>
+              Follow the company’s code of conduct during all events and
+              gatherings.
+            </li>
+            <li>
+              For outdoor events, dress appropriately and check weather updates.
+            </li>
+            <li>
+              Contact the HR department for accommodations or inquiries.
+            </li>
+          </ul>
+        </div>
       </section>
     </main>
   </body>
