--- a/public/faq.html
+++ b/public/faq.html
@@ -3,52 +3,107 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>FAQ</title>
+    <title>FAQs</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link
       rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
       crossorigin="anonymous"
-      referrerpolicy="no-referrer"
     />
     <link rel="stylesheet" href="css/custom.css" />
   </head>
-  <body class="bg-gray-100 min-h-screen flex flex-col">
-        <header class="bg-blue-900 text-white py-4 shadow-md flex  align-center px-10 justify-between">
+
+  <body
+    class="bg-[var(--onyx-bg-base)] text-[var(--onyx-text-primary)] min-h-screen font-inter flex flex-col"
+  >
+    <header
+      class="nav-onyx sticky top-0 z-50 flex items-center justify-between px-4 sm:px-6 lg:px-8 py-4 backdrop-blur-xl border-b border-[var(--onyx-border)] shadow-[0_4px_20px_rgba(0,0,0,0.1)]"
+    >
       <button
-        onclick="window.history.back()"
-        class="text-white hover:text-gray-300 transition"
+        onclick="history.back()"
+        class="text-[var(--onyx-text-secondary)] hover:text-[var(--onyx-accent-1)] flex items-center gap-2 transition"
       >
-        <i class="fa-solid fa-chevron-left text-lg"></i>
+        <i class="fa-solid fa-chevron-left"></i>
       </button>
-      <h1 class="text-2xl font-bold text-center">Frequently Asked Questions</h1>
+      <h1
+        class="text-lg sm:text-xl md:text-2xl font-semibold tracking-tight text-center flex-1 uppercase"
+      >
+        FAQs
+      </h1>
+      <div class="w-10"></div>
     </header>
 
-    <main class="flex-1 container mx-auto p-6">
-      <section class="max-w-3xl mx-auto space-y-4">
-        <div class="bg-white rounded-lg shadow p-4">
-          <h2 class="font-semibold text-lg text-gray-800">Q1: What is this app for?</h2>
-          <p class="text-gray-600 mt-1">This app is designed to manage HR-related tasks like attendance, leaves, payroll, and departmental information for employees.</p>
+    <main
+      class="flex-1 container-onyx py-8 sm:py-10 px-4 sm:px-6 lg:px-10 space-y-8 fade-in"
+    >
+      <section class="space-y-6 max-w-3xl mx-auto">
+        <div class="card-onyx p-6 sm:p-8">
+          <h2 class="text-lg font-semibold text-[var(--onyx-accent-1)]">
+            <i class="fa-solid fa-circle-question mr-2"></i> What is this app
+            for?
+          </h2>
+          <p
+            class="text-[var(--onyx-text-secondary)] mt-2 text-sm sm:text-base leading-relaxed"
+          >
+            This application is designed to handle HR processes such as
+            attendance, payroll, leaves, and department management in one
+            centralized and efficient system.
+          </p>
         </div>
 
-        <div class="bg-white rounded-lg shadow p-4">
-          <h2 class="font-semibold text-lg text-gray-800">Q2: Can I see my colleagues' info?</h2>
-          <p class="text-gray-600 mt-1">Yes, depending on your role, you can view employees in your department, their positions, and leave status.</p>
+        <div class="card-onyx p-6 sm:p-8">
+          <h2 class="text-lg font-semibold text-[var(--onyx-accent-1)]">
+            <i class="fa-solid fa-users mr-2"></i> Can I view my colleagues’
+            information?
+          </h2>
+          <p
+            class="text-[var(--onyx-text-secondary)] mt-2 text-sm sm:text-base leading-relaxed"
+          >
+            Depending on your access level, you can view employees in your
+            department, including their roles, leave status, and other
+            professional details.
+          </p>
         </div>
 
-        <div class="bg-white rounded-lg shadow p-4">
-          <h2 class="font-semibold text-lg text-gray-800">Q3: How do I apply for leave?</h2>
-          <p class="text-gray-600 mt-1">Currently, leave applications are managed through the Leaves section in the app. Fill in the required details and submit for approval.</p>
+        <div class="card-onyx p-6 sm:p-8">
+          <h2 class="text-lg font-semibold text-[var(--onyx-accent-1)]">
+            <i class="fa-solid fa-calendar-check mr-2"></i> How do I apply for
+            leave?
+          </h2>
+          <p
+            class="text-[var(--onyx-text-secondary)] mt-2 text-sm sm:text-base leading-relaxed"
+          >
+            Navigate to the Leaves section in the application. Fill in your
+            desired dates and reason, then submit the request for approval by
+            your department manager.
+          </p>
         </div>
 
-        <div class="bg-white rounded-lg shadow p-4">
-          <h2 class="font-semibold text-lg text-gray-800">Q4: Is my personal information secure?</h2>
-          <p class="text-gray-600 mt-1">Yes, all personal data is stored securely and access is restricted based on user roles.</p>
+        <div class="card-onyx p-6 sm:p-8">
+          <h2 class="text-lg font-semibold text-[var(--onyx-accent-1)]">
+            <i class="fa-solid fa-shield-halved mr-2"></i> Is my personal
+            information secure?
+          </h2>
+          <p
+            class="text-[var(--onyx-text-secondary)] mt-2 text-sm sm:text-base leading-relaxed"
+          >
+            Yes. All employee data is encrypted and securely stored, with
+            role-based access ensuring privacy and protection of sensitive
+            information.
+          </p>
         </div>
 
-        <div class="bg-white rounded-lg shadow p-4">
-          <h2 class="font-semibold text-lg text-gray-800">Q5: Are notifications supported?</h2>
-          <p class="text-gray-600 mt-1">Yes, notifications are provided for relevant actions like leave approvals, updates, and messages.</p>
+        <div class="card-onyx p-6 sm:p-8">
+          <h2 class="text-lg font-semibold text-[var(--onyx-accent-1)]">
+            <i class="fa-solid fa-bell mr-2"></i> Are notifications supported?
+          </h2>
+          <p
+            class="text-[var(--onyx-text-secondary)] mt-2 text-sm sm:text-base leading-relaxed"
+          >
+            Yes. You will receive notifications for events like leave approvals,
+            payroll updates, announcements, and other HR actions that concern
+            you.
+          </p>
         </div>
       </section>
     </main>
